    see https://github.com/Shoes3/shoes3/issues/320
  * Chipmunk and Sqlite are now real gems, maintained by others. Shoes
    no longer has exts and the pseudo gems: ftsearch, chipmunk, sqlite3, hpricot.
    A newer sqlite3 gem is included as a real gem
  ** Major restucturing of C source code. 
    Less monolithic, more files but smaller files.
    https://github.com/Shoes3/shoes3/issues/333
  * rake files cleaned up, slightly. Still confusing.
  * cleanup - remove unused code and old comments. Ongoing, of course.
    https://github.com/Shoes3/shoes3/issues/251

=== Fixed with 3.3.3
  * OSX retina display should work. Findere->Show Info screen displays better
    https://github.com/Shoes3/shoes3/issues/310
  * Restored Windows Theme for - slows initialization, sigh.
    https://github.com/Shoes3/shoes3/issues/345
  * redirects of http to https - common now a days. 
    https://github.com/Shoes3/shoes3/issues/304
  * allow some Shoes built in dialogs like ask, confirm, ...
    to be used before Shoes.app is called.
    https://github.com/Shoes3/shoes3/issues/303
  * gifs are working on Windows again
    https://github.com/Shoes3/shoes3/issues/306
  * improve the manual
    https://github.com/Shoes3/shoes3/issues/317
  
-------------- Shoes 3.3.2 ----------------------------------

=== New with 3.3.2
  * Ruby is updated to 2.2.6 (windows still uses 2.2.4)
  * gems is updated to 2.6.8
  * Profiler with both a GUI and the more traditional text report.
    Written in Shoes and Ruby so you can modify it if you like. 
    https://github.com/Shoes3/shoes3/issues/232
    https://github.com/Shoes3/shoes3/wiki/Profiling
    
  * Shoes.show_console is now Shoes.terminal with many options for size, and
    colors. It can handle some common escape sequences (colors and bolding)  
    On Windows:
      Use Msys>  cshoes.exe
      or install one of those ANSI dll things for your DOS era console. 
      Rumor: Win 10 does support ansi escape sequences on it's console.