@@ -54,14 +54,14 @@
   ** Major restucturing of C source code. 
     Less monolithic, more files but smaller files.
     https://github.com/Shoes3/shoes3/issues/333
-  * rake files cleaned up, slightly. Still confusing.
+  * rake files cleaned up and much faster if you developing at the C level.
   * cleanup - remove unused code and old comments. Ongoing, of course.
     https://github.com/Shoes3/shoes3/issues/251
 
 === Fixed with 3.3.3
-  * OSX retina display should work. Findere->Show Info screen displays better
+  * OSX retina display should work. Finder->Show Info displays accurate info
     https://github.com/Shoes3/shoes3/issues/310
-  * Restored Windows Theme for - slows initialization, sigh.
+  * Restored Windows Theme (for Windows) - slows initialization slightly. 
     https://github.com/Shoes3/shoes3/issues/345
   * redirects of http to https - common now a days. 
     https://github.com/Shoes3/shoes3/issues/304
@@ -72,6 +72,12 @@
     https://github.com/Shoes3/shoes3/issues/306
   * improve the manual
     https://github.com/Shoes3/shoes3/issues/317
+  * plots/charts draw more reliably.
+    issue: https://github.com/Shoes3/shoes3/issues/315
+  * background (a widget/shape) behaves as expected when a stack has
+    a scrollbar. 
+    issues: https://github.com/Shoes3/shoes3/issues/2
+            https://github.com/Shoes3/shoes3/issues/355
   
 -------------- Shoes 3.3.2 ----------------------------------
 
